Fix Dark mode css and fonts

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,9 @@
 	height: 90px;
 
 }
-
+.table td, .select-wrapper input.select-dropdown {
+	color: white;
+}
 
 /* Original CSS */
 
